--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="Category:"
+        android:text="@string/category"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/categoriesSpinner"
         app:layout_constraintEnd_toEndOf="parent"
